
[TestAttestationReport/no_components - 1]

---

[TestAttestationReport/no_attestations - 1]

---

[TestAttestationReport/one_attestation - 1]
--test-boundary\r
Content-Disposition: attachment; name="registry.io/repository/image:tag#0"\r
Content-Type: text/plain\r
\r
attestation1
---

[TestAttestationReport/two_components_two_attestations - 1]
--test-boundary\r
Content-Disposition: attachment; name="registry.io/repository/image1:tag#0"\r
Content-Type: text/plain\r
\r
attestation1\r
--test-boundary\r
Content-Disposition: attachment; name="registry.io/repository/image1:tag#1"\r
Content-Type: text/plain\r
\r
attestation2\r
--test-boundary\r
Content-Disposition: attachment; name="registry.io/repository/image2:tag#0"\r
Content-Type: text/plain\r
\r
attestation3\r
--test-boundary\r
Content-Disposition: attachment; name="registry.io/repository/image2:tag#1"\r
Content-Type: text/plain\r
\r
attestation4
---

[TestAttestationReport/mix_of_components_and_attestations - 1]
--test-boundary\r
Content-Disposition: attachment; name="registry.io/repository/image1:tag#0"\r
Content-Type: text/plain\r
\r
attestation1\r
--test-boundary\r
Content-Disposition: attachment; name="registry.io/repository/image3:tag#0"\r
Content-Type: text/plain\r
\r
attestation2\r
--test-boundary\r
Content-Disposition: attachment; name="registry.io/repository/image3:tag#1"\r
Content-Type: text/plain\r
\r
attestation3
---
